# ShaderPlayground

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  main.cc
include/: database.hh  gui.hh  lua.hh  shader.hh  util.hh  version.hh
include/database/: locale.hh  setup.hh  shaderdata.hh
include/gui/: about.hh  consolelog.hh  editor.hh  guiengine.hh  manual.hh  newshader.hh  openshader.hh  saveasshader.hh  saveshader.hh  settings.hh  titlebar.hh  view.hh  viewport.hh
include/lua/: luaengine.hh
include/shader/: buffers.hh  shader.hh
include/util/: file.hh  glfw.hh  glfwpp.hh  matrix.hh  random.hh  sqlite.hh  sqlitepp.hh  structs.hh  types.hh  vector.hh
src/database/: locale.cc  setup.cc  shaderdata.cc
src/gui/: about.cc  consolelog.cc  editor.cc  guiengine.cc  manual.cc  newshader.cc  openshader.cc  saveasshader.cc  saveshader.cc  settings.cc  titlebar.cc  view.cc  viewport.cc
src/lua/: luaengine.cc
src/shader/: buffers.cc  shader.cc
src/util/: file.cc  glfw.cc  glfwpp.cc  random.cc  sqlite.cc  sqlitepp.cc
